# AI-Projects

./: README.md  qroq.py
Gemini-Chatbot/: main.py
Production-Rag-AIAgent/: .gitignore  custome_types.py  data_loader.py  main.py  pyproject.toml  vector_db.py
Project2/: pyproject.toml
Project3/: main.py  pyproject.toml
Project4/: requirements.txt
Qdrant_storage/: raft_state.json
Qdrant_storage/collections/docs/0/: newest_clocks.json  replica_state.json
Qdrant_storage/collections/docs/0/segments/a792ca9e-0838-4763-b23d-d5711fe7bde0/: mutable_id_tracker.mappings
Qdrant_storage/collections/docs/0/segments/b6a6c2a2-8e46-429a-9068-97fa56b02365/: mutable_id_tracker.mappings
Qdrant_storage/collections/docs/0/segments/b884e375-36cb-4a70-a8d3-a4691279d648/: mutable_id_tracker.mappings
Resume-Analyzer/: main.py
